iptables.txt
# Generated by iptables-save v1.8.7 on Fri Jul 16 18:46:30 2021
*raw
:PREROUTING ACCEPT [2404884:506260859]
:OUTPUT ACCEPT [892545:101993614]
:zone_lan_helper - [0:0]
-A PREROUTING -i br-lan -m comment --comment "!fw3: lan CT helper assignment" -j zone_lan_helper
-A zone_lan_helper -p udp -m comment --comment "!fw3: Amanda backup and archiving proto" -m udp --dport 10080 -j CT --helper amanda
-A zone_lan_helper -p tcp -m comment --comment "!fw3: FTP passive connection tracking" -m tcp --dport 21 -j CT --helper ftp
-A zone_lan_helper -p udp -m comment --comment "!fw3: RAS proto tracking" -m udp --dport 1719 -j CT --helper RAS
-A zone_lan_helper -p tcp -m comment --comment "!fw3: Q.931 proto tracking" -m tcp --dport 1720 -j CT --helper Q.931
-A zone_lan_helper -p tcp -m comment --comment "!fw3: IRC DCC connection tracking" -m tcp --dport 6667 -j CT --helper irc
-A zone_lan_helper -p tcp -m comment --comment "!fw3: PPTP VPN connection tracking" -m tcp --dport 1723 -j CT --helper pptp
-A zone_lan_helper -p tcp -m comment --comment "!fw3: SIP VoIP connection tracking" -m tcp --dport 5060 -j CT --helper sip
-A zone_lan_helper -p udp -m comment --comment "!fw3: SIP VoIP connection tracking" -m udp --dport 5060 -j CT --helper sip
-A zone_lan_helper -p udp -m comment --comment "!fw3: SNMP monitoring connection tracking" -m udp --dport 161 -j CT --helper snmp
-A zone_lan_helper -p udp -m comment --comment "!fw3: TFTP connection tracking" -m udp --dport 69 -j CT --helper tftp
COMMIT
# Completed on Fri Jul 16 18:46:30 2021
# Generated by iptables-save v1.8.7 on Fri Jul 16 18:46:30 2021
*nat
:PREROUTING ACCEPT [2307:389484]
:INPUT ACCEPT [473:114375]
:OUTPUT ACCEPT [749:48294]
:POSTROUTING ACCEPT [358:23731]
:MINIUPNPD - [0:0]
:MINIUPNPD-POSTROUTING - [0:0]
:PSW - [0:0]
:PSW_OUTPUT - [0:0]
:postrouting_lan_rule - [0:0]
:postrouting_rule - [0:0]
:postrouting_wan_rule - [0:0]
:prerouting_lan_rule - [0:0]
:prerouting_rule - [0:0]
:prerouting_wan_rule - [0:0]
:zone_lan_postrouting - [0:0]
:zone_lan_prerouting - [0:0]
:zone_wan_postrouting - [0:0]
:zone_wan_prerouting - [0:0]
-A PREROUTING -p udp -m udp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -m comment --comment "!fw3: Custom prerouting rule chain" -j prerouting_rule
-A PREROUTING -p tcp -j PSW
-A PREROUTING -i br-lan -m comment --comment "!fw3" -j zone_lan_prerouting
-A PREROUTING -i eth0.2 -m comment --comment "!fw3" -j zone_wan_prerouting
-A OUTPUT -p tcp -j PSW_OUTPUT
-A POSTROUTING -m comment --comment "!fw3: Custom postrouting rule chain" -j postrouting_rule
-A POSTROUTING -o br-lan -m comment --comment "!fw3" -j zone_lan_postrouting
-A POSTROUTING -o eth0.2 -m comment --comment "!fw3" -j zone_wan_postrouting
-A PSW -m set --match-set laniplist dst -j RETURN
-A PSW -m set --match-set vpsiplist dst -j RETURN
-A PSW -m set --match-set whitelist dst -j RETURN
-A PSW -m mark --mark 0xff -j RETURN
-A PSW -p tcp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -m multiport --dports 1:65535 -j RETURN
-A PSW -d 11.1.1.1/32 -p tcp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -m set --match-set shuntlist dst -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -m set --match-set blacklist dst -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -j RETURN
-A PSW -p tcp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -m multiport --dports 1:65535 -j RETURN
-A PSW -d 11.1.1.1/32 -p tcp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -m set --match-set shuntlist dst -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -m set --match-set blacklist dst -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -j RETURN
-A PSW -p tcp -m comment --comment "\'默认\'" -m multiport --dports 1:65535 -j RETURN
-A PSW -d 11.1.1.1/32 -p tcp -m comment --comment "\'默认\'" -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'默认\'" -m set --match-set shuntlist dst -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'默认\'" -m set --match-set blacklist dst -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'默认\'" -j REDIRECT --to-ports 1041
-A PSW -p tcp -m comment --comment "\'默认\'" -j RETURN
-A PSW_OUTPUT -m set --match-set laniplist dst -j RETURN
-A PSW_OUTPUT -d 127.0.0.1/32 -p tcp -m comment --comment "\'127.0.0.1:1181\'" -m tcp --dport 1181 -j RETURN
-A PSW_OUTPUT -d 114.114.114.114/32 -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 1041
-A PSW_OUTPUT -m set --match-set vpsiplist dst -j RETURN
-A PSW_OUTPUT -m set --match-set whitelist dst -j RETURN
-A PSW_OUTPUT -m mark --mark 0xff -j RETURN
-A PSW_OUTPUT -p tcp -m multiport --dports 1:65535 -j RETURN
-A PSW_OUTPUT -p tcp -m multiport --sports 1:65535 -j RETURN
-A PSW_OUTPUT -d 11.1.1.1/32 -p tcp -j REDIRECT --to-ports 1041
-A PSW_OUTPUT -p tcp -m set --match-set shuntlist dst -j REDIRECT --to-ports 1041
-A PSW_OUTPUT -p tcp -m set --match-set blacklist dst -j REDIRECT --to-ports 1041
-A PSW_OUTPUT -p tcp -j REDIRECT --to-ports 1041
-A zone_lan_postrouting -m comment --comment "!fw3: Custom lan postrouting rule chain" -j postrouting_lan_rule
-A zone_lan_prerouting -m comment --comment "!fw3: Custom lan prerouting rule chain" -j prerouting_lan_rule
-A zone_wan_postrouting -j MINIUPNPD-POSTROUTING
-A zone_wan_postrouting -m comment --comment "!fw3: Custom wan postrouting rule chain" -j postrouting_wan_rule
-A zone_wan_postrouting -m comment --comment "!fw3" -j FULLCONENAT
-A zone_wan_prerouting -j MINIUPNPD
-A zone_wan_prerouting -m comment --comment "!fw3: Custom wan prerouting rule chain" -j prerouting_wan_rule
-A zone_wan_prerouting -m comment --comment "!fw3" -j FULLCONENAT
COMMIT
# Completed on Fri Jul 16 18:46:30 2021
# Generated by iptables-save v1.8.7 on Fri Jul 16 18:46:30 2021
*mangle
:PREROUTING ACCEPT [7485:1552872]
:INPUT ACCEPT [9443:1638331]
:FORWARD ACCEPT [2427:304405]
:OUTPUT ACCEPT [6579:1871149]
:POSTROUTING ACCEPT [8935:2172816]
:PSW - [0:0]
:PSW_DIVERT - [0:0]
:PSW_OUTPUT - [0:0]
-A PREROUTING -p tcp -m socket -j PSW_DIVERT
-A PREROUTING -j PSW
-A FORWARD -o eth0.2 -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "!fw3: Zone wan MTU fixing" -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i eth0.2 -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "!fw3: Zone wan MTU fixing" -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p udp -j PSW_OUTPUT
-A PSW -m set --match-set laniplist dst -j RETURN
-A PSW -m set --match-set vpsiplist dst -j RETURN
-A PSW -m set --match-set whitelist dst -j RETURN
-A PSW -m mark --mark 0xff -j RETURN
-A PSW -m set --match-set blocklist dst -j DROP
-A PSW -p udp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -m multiport --dports 1:65535 -j RETURN
-A PSW -d 11.1.1.1/32 -p udp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -m set --match-set shuntlist dst -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -m set --match-set blacklist dst -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'GT\'" -m mac --mac-source 1c:d1:07:79:dc:67 -j RETURN
-A PSW -p udp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -m multiport --dports 1:65535 -j RETURN
-A PSW -d 11.1.1.1/32 -p udp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -m set --match-set shuntlist dst -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -m set --match-set blacklist dst -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'iphone12\'" -m mac --mac-source f6:83:fe:66:92:e3 -j RETURN
-A PSW -p tcp -m comment --comment "\'默认\'" -j RETURN
-A PSW -p udp -m comment --comment "\'默认\'" -m multiport --dports 1:65535 -j RETURN
-A PSW -d 11.1.1.1/32 -p udp -m comment --comment "\'默认\'" -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'默认\'" -m set --match-set shuntlist dst -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'默认\'" -m set --match-set blacklist dst -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'默认\'" -j TPROXY --on-port 1041 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
-A PSW -p udp -m comment --comment "\'默认\'" -j RETURN
-A PSW_DIVERT -j MARK --set-xmark 0x1/0xffffffff
-A PSW_DIVERT -j ACCEPT
-A PSW_OUTPUT -m set --match-set laniplist dst -j RETURN
-A PSW_OUTPUT -m set --match-set vpsiplist dst -j RETURN
-A PSW_OUTPUT -m set --match-set whitelist dst -j RETURN
-A PSW_OUTPUT -m mark --mark 0xff -j RETURN
-A PSW_OUTPUT -m set --match-set blocklist dst -j DROP
-A PSW_OUTPUT -p udp -m multiport --dports 1:65535 -j RETURN
-A PSW_OUTPUT -p udp -m multiport --sports 1:65535 -j RETURN
-A PSW_OUTPUT -d 11.1.1.1/32 -p udp -j MARK --set-xmark 0x1/0xffffffff
-A PSW_OUTPUT -p udp -m set --match-set shuntlist dst -j MARK --set-xmark 0x1/0xffffffff
-A PSW_OUTPUT -p udp -m set --match-set blacklist dst -j MARK --set-xmark 0x1/0xffffffff
-A PSW_OUTPUT -p udp -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Fri Jul 16 18:46:30 2021
# Generated by iptables-save v1.8.7 on Fri Jul 16 18:46:30 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:MINIUPNPD - [0:0]
:forwarding_lan_rule - [0:0]
:forwarding_rule - [0:0]
:forwarding_wan_rule - [0:0]
:input_lan_rule - [0:0]
:input_rule - [0:0]
:input_wan_rule - [0:0]
:output_lan_rule - [0:0]
:output_rule - [0:0]
:output_wan_rule - [0:0]
:reject - [0:0]
:syn_flood - [0:0]
:zone_lan_dest_ACCEPT - [0:0]
:zone_lan_forward - [0:0]
:zone_lan_input - [0:0]
:zone_lan_output - [0:0]
:zone_lan_src_ACCEPT - [0:0]
:zone_wan_dest_ACCEPT - [0:0]
:zone_wan_dest_REJECT - [0:0]
:zone_wan_forward - [0:0]
:zone_wan_input - [0:0]
:zone_wan_output - [0:0]
:zone_wan_src_REJECT - [0:0]
-A INPUT -i lo -m comment --comment "!fw3" -j ACCEPT
-A INPUT -m comment --comment "!fw3: Custom input rule chain" -j input_rule
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "!fw3" -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m comment --comment "!fw3" -j syn_flood
-A INPUT -i br-lan -m comment --comment "!fw3" -j zone_lan_input
-A INPUT -i eth0.2 -m comment --comment "!fw3" -j zone_wan_input
-A FORWARD -m comment --comment "!fw3: Custom forwarding rule chain" -j forwarding_rule
-A FORWARD -m comment --comment "!fw3: Traffic offloading" -m conntrack --ctstate RELATED,ESTABLISHED -j FLOWOFFLOAD --hw
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "!fw3" -j ACCEPT
-A FORWARD -i br-lan -m comment --comment "!fw3" -j zone_lan_forward
-A FORWARD -i eth0.2 -m comment --comment "!fw3" -j zone_wan_forward
-A FORWARD -m comment --comment "!fw3" -j reject
-A OUTPUT -o lo -m comment --comment "!fw3" -j ACCEPT
-A OUTPUT -m comment --comment "!fw3: Custom output rule chain" -j output_rule
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "!fw3" -j ACCEPT
-A OUTPUT -o br-lan -m comment --comment "!fw3" -j zone_lan_output
-A OUTPUT -o eth0.2 -m comment --comment "!fw3" -j zone_wan_output
-A reject -p tcp -m comment --comment "!fw3" -j REJECT --reject-with tcp-reset
-A reject -m comment --comment "!fw3" -j REJECT --reject-with icmp-port-unreachable
-A syn_flood -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 25/sec --limit-burst 50 -m comment --comment "!fw3" -j RETURN
-A syn_flood -m comment --comment "!fw3" -j DROP
-A zone_lan_dest_ACCEPT -o br-lan -m comment --comment "!fw3" -j ACCEPT
-A zone_lan_forward -m comment --comment "!fw3: Custom lan forwarding rule chain" -j forwarding_lan_rule
-A zone_lan_forward -m comment --comment "!fw3: Zone lan to wan forwarding policy" -j zone_wan_dest_ACCEPT
-A zone_lan_forward -m conntrack --ctstate DNAT -m comment --comment "!fw3: Accept port forwards" -j ACCEPT
-A zone_lan_forward -m comment --comment "!fw3" -j zone_lan_dest_ACCEPT
-A zone_lan_input -m comment --comment "!fw3: Custom lan input rule chain" -j input_lan_rule
-A zone_lan_input -m conntrack --ctstate DNAT -m comment --comment "!fw3: Accept port redirections" -j ACCEPT
-A zone_lan_input -m comment --comment "!fw3" -j zone_lan_src_ACCEPT
-A zone_lan_output -m comment --comment "!fw3: Custom lan output rule chain" -j output_lan_rule
-A zone_lan_output -m comment --comment "!fw3" -j zone_lan_dest_ACCEPT
-A zone_lan_src_ACCEPT -i br-lan -m conntrack --ctstate NEW,UNTRACKED -m comment --comment "!fw3" -j ACCEPT
-A zone_wan_dest_ACCEPT -o eth0.2 -m conntrack --ctstate INVALID -m comment --comment "!fw3: Prevent NAT leakage" -j DROP
-A zone_wan_dest_ACCEPT -o eth0.2 -m comment --comment "!fw3" -j ACCEPT
-A zone_wan_dest_REJECT -o eth0.2 -m comment --comment "!fw3" -j reject
-A zone_wan_forward -j MINIUPNPD
-A zone_wan_forward -m comment --comment "!fw3: Custom wan forwarding rule chain" -j forwarding_wan_rule
-A zone_wan_forward -p esp -m comment --comment "!fw3: Allow-IPSec-ESP" -j zone_lan_dest_ACCEPT
-A zone_wan_forward -p udp -m udp --dport 500 -m comment --comment "!fw3: Allow-ISAKMP" -j zone_lan_dest_ACCEPT
-A zone_wan_forward -m conntrack --ctstate DNAT -m comment --comment "!fw3: Accept port forwards" -j ACCEPT
-A zone_wan_forward -m comment --comment "!fw3" -j zone_wan_dest_REJECT
-A zone_wan_input -m comment --comment "!fw3: Custom wan input rule chain" -j input_wan_rule
-A zone_wan_input -p udp -m udp --dport 68 -m comment --comment "!fw3: Allow-DHCP-Renew" -j ACCEPT
-A zone_wan_input -p icmp -m icmp --icmp-type 8 -m comment --comment "!fw3: Allow-Ping" -j ACCEPT
-A zone_wan_input -p igmp -m comment --comment "!fw3: Allow-IGMP" -j ACCEPT
-A zone_wan_input -p tcp -m tcp --dport 1688 -m comment --comment "!fw3: kms" -j ACCEPT
-A zone_wan_input -m conntrack --ctstate DNAT -m comment --comment "!fw3: Accept port redirections" -j ACCEPT
-A zone_wan_input -m comment --comment "!fw3" -j zone_wan_src_REJECT
-A zone_wan_output -m comment --comment "!fw3: Custom wan output rule chain" -j output_wan_rule
-A zone_wan_output -m comment --comment "!fw3" -j zone_wan_dest_ACCEPT
-A zone_wan_src_REJECT -i eth0.2 -m comment --comment "!fw3" -j reject
COMMIT
# Completed on Fri Jul 16 18:46:30 2021
